feat(messages): add help

--- a/src/scss/settings/inputs.scss
+++ b/src/scss/settings/inputs.scss
@@ -10,8 +10,14 @@
             max-width: __MSG_input_width_css__;
         }
 
-        &.window_hostname_comparison .input_w_and_help_btn {
-            max-width: calc(__MSG_input_width_css__ - 28px);
+        &.window_hostname_comparison {
+            .input_w_and_help_btn {
+                max-width: calc(__MSG_input_width_css__);
+            }
+
+            .help {
+                max-width: calc(__MSG_input_width_css__ - 28px) !important;
+            }
         }
     }
 }
