feat: implement new URL filters

--- a/src/scss/settings/inputs.scss
+++ b/src/scss/settings/inputs.scss
@@ -10,7 +10,7 @@
             max-width: __MSG_input_width_css__;
         }
 
-        &.window_hostname_comparison {
+        &.window_url_comparison {
             .input_w_and_help_btn {
                 max-width: __MSG_input_width_css__;
             }
